fix: openapiのバリデーションが有効になるように修正
